feature: add fight sound

--- a/PokemonTeam/Views/PariPoke/_GamePartial.cshtml
+++ b/PokemonTeam/Views/PariPoke/_GamePartial.cshtml
@@ -41,3 +41,5 @@
     </div>
 </div>
 <audio id="victorySound" src="~/audio/victory.mp3" preload="auto"></audio>
+<audio id="startSound" src="~/audio/fight.mp3" preload="auto"></audio>
+
