--- a/PokemonTeam/Views/PariPoke/_GamePartial.cshtml
+++ b/PokemonTeam/Views/PariPoke/_GamePartial.cshtml
@@ -33,7 +33,7 @@
 </section>
 
 <div id="victoryPopup" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); text-align:center; z-index:1000;">
-    <div style="background:white; padding:40px; display:inline-block; margin-top:10%; border-radius:8px;">
+    <div style="padding:40px; display:inline-block; margin-top:10%; border-radius:8px;">
         <h1 id="victoryTitle">Victoire !</h1>
         <img id="victorySprite" src="" alt="Gagnant" style="width:150px; height:150px;" />
         <p id="victoryMessage"></p>
