--- a/PokemonTeam/wwwroot/css/PariPoke.css
+++ b/PokemonTeam/wwwroot/css/PariPoke.css
@@ -462,6 +462,10 @@ h3 { font-size: 1.5rem; }
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
+#player-info {
+    color: black;
+}
+
 /* ===== INTERFACE DE JEU ===== */
 #game-ui {
     text-align: center;
@@ -561,6 +565,7 @@ h3 { font-size: 1.5rem; }
     border-radius: 50%;
     border: 4px solid var(--accent-color);
     box-shadow: 0 0 30px rgba(251, 191, 36, 0.5);
+    background: white;
 }
 
 #victoryMessage {
