add logo Pokerogue

--- a/PokemonTeam/Views/PokeRogue/index.cshtml
+++ b/PokemonTeam/Views/PokeRogue/index.cshtml
@@ -5,6 +5,8 @@
 <div class="text-center">
     <h1>Bienvenue dans PokéRogue</h1>
     <p>Préparez votre équipe et affrontez des dresseurs redoutables !</p>
+    <img class="d-block mx-auto" src="Image/logoPokeRogue.png" width="500" height="500" alt="Logo PariPoke">
+
 
     <a id="new-game-btn" class="btn btn-primary" href="/PokeRogue/SelectTeam">
         Commencer une nouvelle aventure
