--- a/PokemonTeam/Views/Home/Index.cshtml
+++ b/PokemonTeam/Views/Home/Index.cshtml
@@ -1,8 +1,41 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+@{
+    ViewData["Title"] = "Accueil";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container text-center mt-4">
+    <h1 class="display-4">Bienvenue</h1>
+    <p>Sélectionne une application pour commencer :</p>
+
+    <div class="row mt-5">
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <h5 class="card-title">PariPoke</h5>
+                    <p class="card-text">Parie sur la course Pokémon</p>
+                    <a asp-controller="PariPoke" asp-action="Index" class="btn btn-primary mt-auto">Accéder</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <h5 class="card-title">PokeGacha</h5>
+                    <p class="card-text">Tire des Pokémon et combats</p>
+                    <a asp-controller="PokeGacha" asp-action="Index" class="btn btn-primary mt-auto">Accéder</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <h5 class="card-title">PokeWare</h5>
+                    <p class="card-text">Quiz Pokémon interactif</p>
+                    <a asp-controller="PokeWare" asp-action="SelectTeam" class="btn btn-primary mt-auto">Accéder</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
