--- a/PokemonTeam/Views/_ViewImports.cshtml
+++ b/PokemonTeam/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using PokemonTeam
+@using PokemonTeam
 @using PokemonTeam.Models
+@using PokemonTeam.Models.PokeWare
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
